--- a/inference_demo/templates/webapp.html
+++ b/inference_demo/templates/webapp.html
@@ -21,14 +21,14 @@
 <div class="row justify-content-center m-2">
 <div class="col-lg-4 p-3 m-2  border rounded border-dark">
     <form action="{{ url_for('web_app')}}" method="POST" >
-        {{ form.csrf_token }}
-        {% if form.csrf_token.errors %}
-            <div class="alert alert-danger">You have submitted an invalid CSRF token</div>
-        {% endif %}
+
         <fieldset>
             <legend>Census imputation</legend>
             <div class="form-group">
-
+                        {{ form.csrf_token }}
+        {% if form.csrf_token.errors %}
+            <div class="alert alert-danger">You have submitted an invalid CSRF token</div>
+        {% endif %}
                 {% for field in form.field_list %}
                         <div class="p-2">
                         <div class="row p-1">
@@ -84,10 +84,19 @@ var ctx = document.getElementById("{{ key.lower() }}");
         datasets: [{
           label: '{{ description_dict[key] }}',
           data: {{ pred_description[key]['y'] }},
-          maxBarThickness: 1,
+          backgroundColor: "#3e95cd"
 
-          borderWidth: 1
-        }]
+
+        }],
+        options: {
+            scales: {
+                xAxes: [{
+                    barThickness: 1,  // number (pixels) or 'flex'
+                    maxBarThickness: 4 // number (pixels)
+                }]
+            }
+        }
+
       },
 
     });
